// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Widget should render the component correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Widget
    autoplay={false}
    columns={3}
    company={
      Object {
        "id": "wttj",
        "logo": "logo-wttj.png",
        "name": "Welcome to the jungle",
      }
    }
    content={
      Array [
        Object {
          "caption": "1.jpg",
          "subtitle": "Co-Founder",
          "title": "Bertrand Uzeel",
          "type": "video",
        },
        Object {
          "caption": "2.jpg",
          "type": "picture",
        },
        Object {
          "caption": "3.jpg",
          "type": "picture",
        },
        Object {
          "text": "Life is short, work somewhere awesome.",
          "type": "quote",
        },
        Object {
          "caption": "4.jpg",
          "type": "picture",
        },
        Object {
          "caption": "5.jpg",
          "subtitle": "Sales Development Manager",
          "title": "Mélanie Babinot",
          "type": "video",
        },
        Object {
          "caption": "6.jpg",
          "type": "picture",
        },
        Object {
          "caption": "7.jpg",
          "type": "picture",
        },
        Object {
          "text": "C’est pas faux !",
          "type": "quote",
        },
        Object {
          "caption": "8.jpg",
          "subtitle": "CTO",
          "title": "Kevin Le Roy",
          "type": "video",
        },
        Object {
          "caption": "9.jpg",
          "type": "picture",
        },
        Object {
          "caption": "10.jpg",
          "subtitle": "Head of production",
          "title": "Anne-Claire",
          "type": "video",
        },
        Object {
          "caption": "11.jpg",
          "type": "picture",
        },
      ]
    }
    rows={2}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <Header
          handleNext={[Function]}
          handlePrev={[Function]}
          logo="logo-wttj.png"
          maxStep={4}
          name="Welcome to the jungle"
          step={0}
        />,
        <ForwardRef
          onTouchMove={[Function]}
          onTouchStart={[Function]}
        >
          <Slider
            content={
              Array [
                Object {
                  "caption": "1.jpg",
                  "subtitle": "Co-Founder",
                  "title": "Bertrand Uzeel",
                  "type": "video",
                },
                Object {
                  "caption": "2.jpg",
                  "type": "picture",
                },
                Object {
                  "caption": "3.jpg",
                  "type": "picture",
                },
                Object {
                  "text": "Life is short, work somewhere awesome.",
                  "type": "quote",
                },
                Object {
                  "caption": "4.jpg",
                  "type": "picture",
                },
                Object {
                  "caption": "5.jpg",
                  "subtitle": "Sales Development Manager",
                  "title": "Mélanie Babinot",
                  "type": "video",
                },
                Object {
                  "caption": "6.jpg",
                  "type": "picture",
                },
                Object {
                  "caption": "7.jpg",
                  "type": "picture",
                },
                Object {
                  "text": "C’est pas faux !",
                  "type": "quote",
                },
                Object {
                  "caption": "8.jpg",
                  "subtitle": "CTO",
                  "title": "Kevin Le Roy",
                  "type": "video",
                },
                Object {
                  "caption": "9.jpg",
                  "type": "picture",
                },
                Object {
                  "caption": "10.jpg",
                  "subtitle": "Head of production",
                  "title": "Anne-Claire",
                  "type": "video",
                },
                Object {
                  "caption": "11.jpg",
                  "type": "picture",
                },
              ]
            }
            contentWidth={0}
            id="wttj"
            refSlider={
              Object {
                "current": null,
              }
            }
            step={0}
            translateScroll={0}
            width={0}
          />
        </ForwardRef>,
        <ProgressBar
          progress={42.857142857142854}
        />,
        <Footer
          id="wttj"
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "handleNext": [Function],
          "handlePrev": [Function],
          "logo": "logo-wttj.png",
          "maxStep": 4,
          "name": "Welcome to the jungle",
          "step": 0,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": <Slider
            content={
              Array [
                Object {
                  "caption": "1.jpg",
                  "subtitle": "Co-Founder",
                  "title": "Bertrand Uzeel",
                  "type": "video",
                },
                Object {
                  "caption": "2.jpg",
                  "type": "picture",
                },
                Object {
                  "caption": "3.jpg",
                  "type": "picture",
                },
                Object {
                  "text": "Life is short, work somewhere awesome.",
                  "type": "quote",
                },
                Object {
                  "caption": "4.jpg",
                  "type": "picture",
                },
                Object {
                  "caption": "5.jpg",
                  "subtitle": "Sales Development Manager",
                  "title": "Mélanie Babinot",
                  "type": "video",
                },
                Object {
                  "caption": "6.jpg",
                  "type": "picture",
                },
                Object {
                  "caption": "7.jpg",
                  "type": "picture",
                },
                Object {
                  "text": "C’est pas faux !",
                  "type": "quote",
                },
                Object {
                  "caption": "8.jpg",
                  "subtitle": "CTO",
                  "title": "Kevin Le Roy",
                  "type": "video",
                },
                Object {
                  "caption": "9.jpg",
                  "type": "picture",
                },
                Object {
                  "caption": "10.jpg",
                  "subtitle": "Head of production",
                  "title": "Anne-Claire",
                  "type": "video",
                },
                Object {
                  "caption": "11.jpg",
                  "type": "picture",
                },
              ]
            }
            contentWidth={0}
            id="wttj"
            refSlider={
              Object {
                "current": null,
              }
            }
            step={0}
            translateScroll={0}
            width={0}
          />,
          "onTouchMove": [Function],
          "onTouchStart": [Function],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "content": Array [
              Object {
                "caption": "1.jpg",
                "subtitle": "Co-Founder",
                "title": "Bertrand Uzeel",
                "type": "video",
              },
              Object {
                "caption": "2.jpg",
                "type": "picture",
              },
              Object {
                "caption": "3.jpg",
                "type": "picture",
              },
              Object {
                "text": "Life is short, work somewhere awesome.",
                "type": "quote",
              },
              Object {
                "caption": "4.jpg",
                "type": "picture",
              },
              Object {
                "caption": "5.jpg",
                "subtitle": "Sales Development Manager",
                "title": "Mélanie Babinot",
                "type": "video",
              },
              Object {
                "caption": "6.jpg",
                "type": "picture",
              },
              Object {
                "caption": "7.jpg",
                "type": "picture",
              },
              Object {
                "text": "C’est pas faux !",
                "type": "quote",
              },
              Object {
                "caption": "8.jpg",
                "subtitle": "CTO",
                "title": "Kevin Le Roy",
                "type": "video",
              },
              Object {
                "caption": "9.jpg",
                "type": "picture",
              },
              Object {
                "caption": "10.jpg",
                "subtitle": "Head of production",
                "title": "Anne-Claire",
                "type": "video",
              },
              Object {
                "caption": "11.jpg",
                "type": "picture",
              },
            ],
            "contentWidth": 0,
            "id": "wttj",
            "refSlider": Object {
              "current": null,
            },
            "step": 0,
            "translateScroll": 0,
            "width": 0,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-jKJlTe",
            "isStatic": true,
            "rules": Array [
              "
  flex: 1;
",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-jKJlTe",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        },
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "progress": 42.857142857142854,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "id": "wttj",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "sc-ckVGcZ",
        "isStatic": true,
        "rules": Array [
          "
  border-radius: 6px;
  font-family: \\"Roboto Condensed\\", sans-serif;
  color: ",
          "#31333b",
          ";
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
",
        ],
      },
      "displayName": "styled.div",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "sc-ckVGcZ",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <Header
            handleNext={[Function]}
            handlePrev={[Function]}
            logo="logo-wttj.png"
            maxStep={4}
            name="Welcome to the jungle"
            step={0}
          />,
          <ForwardRef
            onTouchMove={[Function]}
            onTouchStart={[Function]}
          >
            <Slider
              content={
                Array [
                  Object {
                    "caption": "1.jpg",
                    "subtitle": "Co-Founder",
                    "title": "Bertrand Uzeel",
                    "type": "video",
                  },
                  Object {
                    "caption": "2.jpg",
                    "type": "picture",
                  },
                  Object {
                    "caption": "3.jpg",
                    "type": "picture",
                  },
                  Object {
                    "text": "Life is short, work somewhere awesome.",
                    "type": "quote",
                  },
                  Object {
                    "caption": "4.jpg",
                    "type": "picture",
                  },
                  Object {
                    "caption": "5.jpg",
                    "subtitle": "Sales Development Manager",
                    "title": "Mélanie Babinot",
                    "type": "video",
                  },
                  Object {
                    "caption": "6.jpg",
                    "type": "picture",
                  },
                  Object {
                    "caption": "7.jpg",
                    "type": "picture",
                  },
                  Object {
                    "text": "C’est pas faux !",
                    "type": "quote",
                  },
                  Object {
                    "caption": "8.jpg",
                    "subtitle": "CTO",
                    "title": "Kevin Le Roy",
                    "type": "video",
                  },
                  Object {
                    "caption": "9.jpg",
                    "type": "picture",
                  },
                  Object {
                    "caption": "10.jpg",
                    "subtitle": "Head of production",
                    "title": "Anne-Claire",
                    "type": "video",
                  },
                  Object {
                    "caption": "11.jpg",
                    "type": "picture",
                  },
                ]
              }
              contentWidth={0}
              id="wttj"
              refSlider={
                Object {
                  "current": null,
                }
              }
              step={0}
              translateScroll={0}
              width={0}
            />
          </ForwardRef>,
          <ProgressBar
            progress={42.857142857142854}
          />,
          <Footer
            id="wttj"
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "handleNext": [Function],
            "handlePrev": [Function],
            "logo": "logo-wttj.png",
            "maxStep": 4,
            "name": "Welcome to the jungle",
            "step": 0,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <Slider
              content={
                Array [
                  Object {
                    "caption": "1.jpg",
                    "subtitle": "Co-Founder",
                    "title": "Bertrand Uzeel",
                    "type": "video",
                  },
                  Object {
                    "caption": "2.jpg",
                    "type": "picture",
                  },
                  Object {
                    "caption": "3.jpg",
                    "type": "picture",
                  },
                  Object {
                    "text": "Life is short, work somewhere awesome.",
                    "type": "quote",
                  },
                  Object {
                    "caption": "4.jpg",
                    "type": "picture",
                  },
                  Object {
                    "caption": "5.jpg",
                    "subtitle": "Sales Development Manager",
                    "title": "Mélanie Babinot",
                    "type": "video",
                  },
                  Object {
                    "caption": "6.jpg",
                    "type": "picture",
                  },
                  Object {
                    "caption": "7.jpg",
                    "type": "picture",
                  },
                  Object {
                    "text": "C’est pas faux !",
                    "type": "quote",
                  },
                  Object {
                    "caption": "8.jpg",
                    "subtitle": "CTO",
                    "title": "Kevin Le Roy",
                    "type": "video",
                  },
                  Object {
                    "caption": "9.jpg",
                    "type": "picture",
                  },
                  Object {
                    "caption": "10.jpg",
                    "subtitle": "Head of production",
                    "title": "Anne-Claire",
                    "type": "video",
                  },
                  Object {
                    "caption": "11.jpg",
                    "type": "picture",
                  },
                ]
              }
              contentWidth={0}
              id="wttj"
              refSlider={
                Object {
                  "current": null,
                }
              }
              step={0}
              translateScroll={0}
              width={0}
            />,
            "onTouchMove": [Function],
            "onTouchStart": [Function],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "content": Array [
                Object {
                  "caption": "1.jpg",
                  "subtitle": "Co-Founder",
                  "title": "Bertrand Uzeel",
                  "type": "video",
                },
                Object {
                  "caption": "2.jpg",
                  "type": "picture",
                },
                Object {
                  "caption": "3.jpg",
                  "type": "picture",
                },
                Object {
                  "text": "Life is short, work somewhere awesome.",
                  "type": "quote",
                },
                Object {
                  "caption": "4.jpg",
                  "type": "picture",
                },
                Object {
                  "caption": "5.jpg",
                  "subtitle": "Sales Development Manager",
                  "title": "Mélanie Babinot",
                  "type": "video",
                },
                Object {
                  "caption": "6.jpg",
                  "type": "picture",
                },
                Object {
                  "caption": "7.jpg",
                  "type": "picture",
                },
                Object {
                  "text": "C’est pas faux !",
                  "type": "quote",
                },
                Object {
                  "caption": "8.jpg",
                  "subtitle": "CTO",
                  "title": "Kevin Le Roy",
                  "type": "video",
                },
                Object {
                  "caption": "9.jpg",
                  "type": "picture",
                },
                Object {
                  "caption": "10.jpg",
                  "subtitle": "Head of production",
                  "title": "Anne-Claire",
                  "type": "video",
                },
                Object {
                  "caption": "11.jpg",
                  "type": "picture",
                },
              ],
              "contentWidth": 0,
              "id": "wttj",
              "refSlider": Object {
                "current": null,
              },
              "step": 0,
              "translateScroll": 0,
              "width": 0,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-jKJlTe",
              "isStatic": true,
              "rules": Array [
                "
  flex: 1;
",
              ],
            },
            "displayName": "styled.div",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-jKJlTe",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          },
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "progress": 42.857142857142854,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "id": "wttj",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-ckVGcZ",
          "isStatic": true,
          "rules": Array [
            "
  border-radius: 6px;
  font-family: \\"Roboto Condensed\\", sans-serif;
  color: ",
            "#31333b",
            ";
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
",
          ],
        },
        "displayName": "styled.div",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-ckVGcZ",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Widget should render the component correctly for mobile 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Widget
    autoplay={false}
    columns={3}
    company={
      Object {
        "id": "wttj",
        "logo": "logo-wttj.png",
        "name": "Welcome to the jungle",
      }
    }
    content={
      Array [
        Object {
          "caption": "1.jpg",
          "subtitle": "Co-Founder",
          "title": "Bertrand Uzeel",
          "type": "video",
        },
        Object {
          "caption": "2.jpg",
          "type": "picture",
        },
        Object {
          "caption": "3.jpg",
          "type": "picture",
        },
        Object {
          "text": "Life is short, work somewhere awesome.",
          "type": "quote",
        },
        Object {
          "caption": "4.jpg",
          "type": "picture",
        },
        Object {
          "caption": "5.jpg",
          "subtitle": "Sales Development Manager",
          "title": "Mélanie Babinot",
          "type": "video",
        },
        Object {
          "caption": "6.jpg",
          "type": "picture",
        },
        Object {
          "caption": "7.jpg",
          "type": "picture",
        },
        Object {
          "text": "C’est pas faux !",
          "type": "quote",
        },
        Object {
          "caption": "8.jpg",
          "subtitle": "CTO",
          "title": "Kevin Le Roy",
          "type": "video",
        },
        Object {
          "caption": "9.jpg",
          "type": "picture",
        },
        Object {
          "caption": "10.jpg",
          "subtitle": "Head of production",
          "title": "Anne-Claire",
          "type": "video",
        },
        Object {
          "caption": "11.jpg",
          "type": "picture",
        },
      ]
    }
    rows={2}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <Header
          handleNext={[Function]}
          handlePrev={[Function]}
          logo="logo-wttj.png"
          maxStep={6}
          name="Welcome to the jungle"
          step={0}
        />,
        <ForwardRef
          onTouchMove={[Function]}
          onTouchStart={[Function]}
        >
          <Slider
            content={
              Array [
                Object {
                  "caption": "1.jpg",
                  "subtitle": "Co-Founder",
                  "title": "Bertrand Uzeel",
                  "type": "video",
                },
                Object {
                  "caption": "2.jpg",
                  "type": "picture",
                },
                Object {
                  "caption": "3.jpg",
                  "type": "picture",
                },
                Object {
                  "text": "Life is short, work somewhere awesome.",
                  "type": "quote",
                },
                Object {
                  "caption": "4.jpg",
                  "type": "picture",
                },
                Object {
                  "caption": "5.jpg",
                  "subtitle": "Sales Development Manager",
                  "title": "Mélanie Babinot",
                  "type": "video",
                },
                Object {
                  "caption": "6.jpg",
                  "type": "picture",
                },
                Object {
                  "caption": "7.jpg",
                  "type": "picture",
                },
                Object {
                  "text": "C’est pas faux !",
                  "type": "quote",
                },
                Object {
                  "caption": "8.jpg",
                  "subtitle": "CTO",
                  "title": "Kevin Le Roy",
                  "type": "video",
                },
                Object {
                  "caption": "9.jpg",
                  "type": "picture",
                },
                Object {
                  "caption": "10.jpg",
                  "subtitle": "Head of production",
                  "title": "Anne-Claire",
                  "type": "video",
                },
                Object {
                  "caption": "11.jpg",
                  "type": "picture",
                },
              ]
            }
            contentWidth={null}
            id="wttj"
            refSlider={
              Object {
                "current": null,
              }
            }
            step={0}
            translateScroll={0}
            width={0}
          />
        </ForwardRef>,
        <ProgressBar
          progress={14.285714285714285}
        />,
        <Footer
          id="wttj"
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "handleNext": [Function],
          "handlePrev": [Function],
          "logo": "logo-wttj.png",
          "maxStep": 6,
          "name": "Welcome to the jungle",
          "step": 0,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": <Slider
            content={
              Array [
                Object {
                  "caption": "1.jpg",
                  "subtitle": "Co-Founder",
                  "title": "Bertrand Uzeel",
                  "type": "video",
                },
                Object {
                  "caption": "2.jpg",
                  "type": "picture",
                },
                Object {
                  "caption": "3.jpg",
                  "type": "picture",
                },
                Object {
                  "text": "Life is short, work somewhere awesome.",
                  "type": "quote",
                },
                Object {
                  "caption": "4.jpg",
                  "type": "picture",
                },
                Object {
                  "caption": "5.jpg",
                  "subtitle": "Sales Development Manager",
                  "title": "Mélanie Babinot",
                  "type": "video",
                },
                Object {
                  "caption": "6.jpg",
                  "type": "picture",
                },
                Object {
                  "caption": "7.jpg",
                  "type": "picture",
                },
                Object {
                  "text": "C’est pas faux !",
                  "type": "quote",
                },
                Object {
                  "caption": "8.jpg",
                  "subtitle": "CTO",
                  "title": "Kevin Le Roy",
                  "type": "video",
                },
                Object {
                  "caption": "9.jpg",
                  "type": "picture",
                },
                Object {
                  "caption": "10.jpg",
                  "subtitle": "Head of production",
                  "title": "Anne-Claire",
                  "type": "video",
                },
                Object {
                  "caption": "11.jpg",
                  "type": "picture",
                },
              ]
            }
            contentWidth={null}
            id="wttj"
            refSlider={
              Object {
                "current": null,
              }
            }
            step={0}
            translateScroll={0}
            width={0}
          />,
          "onTouchMove": [Function],
          "onTouchStart": [Function],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "content": Array [
              Object {
                "caption": "1.jpg",
                "subtitle": "Co-Founder",
                "title": "Bertrand Uzeel",
                "type": "video",
              },
              Object {
                "caption": "2.jpg",
                "type": "picture",
              },
              Object {
                "caption": "3.jpg",
                "type": "picture",
              },
              Object {
                "text": "Life is short, work somewhere awesome.",
                "type": "quote",
              },
              Object {
                "caption": "4.jpg",
                "type": "picture",
              },
              Object {
                "caption": "5.jpg",
                "subtitle": "Sales Development Manager",
                "title": "Mélanie Babinot",
                "type": "video",
              },
              Object {
                "caption": "6.jpg",
                "type": "picture",
              },
              Object {
                "caption": "7.jpg",
                "type": "picture",
              },
              Object {
                "text": "C’est pas faux !",
                "type": "quote",
              },
              Object {
                "caption": "8.jpg",
                "subtitle": "CTO",
                "title": "Kevin Le Roy",
                "type": "video",
              },
              Object {
                "caption": "9.jpg",
                "type": "picture",
              },
              Object {
                "caption": "10.jpg",
                "subtitle": "Head of production",
                "title": "Anne-Claire",
                "type": "video",
              },
              Object {
                "caption": "11.jpg",
                "type": "picture",
              },
            ],
            "contentWidth": null,
            "id": "wttj",
            "refSlider": Object {
              "current": null,
            },
            "step": 0,
            "translateScroll": 0,
            "width": 0,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-jKJlTe",
            "isStatic": true,
            "rules": Array [
              "
  flex: 1;
",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-jKJlTe",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        },
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "progress": 14.285714285714285,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "id": "wttj",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "sc-ckVGcZ",
        "isStatic": true,
        "rules": Array [
          "
  border-radius: 6px;
  font-family: \\"Roboto Condensed\\", sans-serif;
  color: ",
          "#31333b",
          ";
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
",
        ],
      },
      "displayName": "styled.div",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "sc-ckVGcZ",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <Header
            handleNext={[Function]}
            handlePrev={[Function]}
            logo="logo-wttj.png"
            maxStep={6}
            name="Welcome to the jungle"
            step={0}
          />,
          <ForwardRef
            onTouchMove={[Function]}
            onTouchStart={[Function]}
          >
            <Slider
              content={
                Array [
                  Object {
                    "caption": "1.jpg",
                    "subtitle": "Co-Founder",
                    "title": "Bertrand Uzeel",
                    "type": "video",
                  },
                  Object {
                    "caption": "2.jpg",
                    "type": "picture",
                  },
                  Object {
                    "caption": "3.jpg",
                    "type": "picture",
                  },
                  Object {
                    "text": "Life is short, work somewhere awesome.",
                    "type": "quote",
                  },
                  Object {
                    "caption": "4.jpg",
                    "type": "picture",
                  },
                  Object {
                    "caption": "5.jpg",
                    "subtitle": "Sales Development Manager",
                    "title": "Mélanie Babinot",
                    "type": "video",
                  },
                  Object {
                    "caption": "6.jpg",
                    "type": "picture",
                  },
                  Object {
                    "caption": "7.jpg",
                    "type": "picture",
                  },
                  Object {
                    "text": "C’est pas faux !",
                    "type": "quote",
                  },
                  Object {
                    "caption": "8.jpg",
                    "subtitle": "CTO",
                    "title": "Kevin Le Roy",
                    "type": "video",
                  },
                  Object {
                    "caption": "9.jpg",
                    "type": "picture",
                  },
                  Object {
                    "caption": "10.jpg",
                    "subtitle": "Head of production",
                    "title": "Anne-Claire",
                    "type": "video",
                  },
                  Object {
                    "caption": "11.jpg",
                    "type": "picture",
                  },
                ]
              }
              contentWidth={null}
              id="wttj"
              refSlider={
                Object {
                  "current": null,
                }
              }
              step={0}
              translateScroll={0}
              width={0}
            />
          </ForwardRef>,
          <ProgressBar
            progress={14.285714285714285}
          />,
          <Footer
            id="wttj"
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "handleNext": [Function],
            "handlePrev": [Function],
            "logo": "logo-wttj.png",
            "maxStep": 6,
            "name": "Welcome to the jungle",
            "step": 0,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <Slider
              content={
                Array [
                  Object {
                    "caption": "1.jpg",
                    "subtitle": "Co-Founder",
                    "title": "Bertrand Uzeel",
                    "type": "video",
                  },
                  Object {
                    "caption": "2.jpg",
                    "type": "picture",
                  },
                  Object {
                    "caption": "3.jpg",
                    "type": "picture",
                  },
                  Object {
                    "text": "Life is short, work somewhere awesome.",
                    "type": "quote",
                  },
                  Object {
                    "caption": "4.jpg",
                    "type": "picture",
                  },
                  Object {
                    "caption": "5.jpg",
                    "subtitle": "Sales Development Manager",
                    "title": "Mélanie Babinot",
                    "type": "video",
                  },
                  Object {
                    "caption": "6.jpg",
                    "type": "picture",
                  },
                  Object {
                    "caption": "7.jpg",
                    "type": "picture",
                  },
                  Object {
                    "text": "C’est pas faux !",
                    "type": "quote",
                  },
                  Object {
                    "caption": "8.jpg",
                    "subtitle": "CTO",
                    "title": "Kevin Le Roy",
                    "type": "video",
                  },
                  Object {
                    "caption": "9.jpg",
                    "type": "picture",
                  },
                  Object {
                    "caption": "10.jpg",
                    "subtitle": "Head of production",
                    "title": "Anne-Claire",
                    "type": "video",
                  },
                  Object {
                    "caption": "11.jpg",
                    "type": "picture",
                  },
                ]
              }
              contentWidth={null}
              id="wttj"
              refSlider={
                Object {
                  "current": null,
                }
              }
              step={0}
              translateScroll={0}
              width={0}
            />,
            "onTouchMove": [Function],
            "onTouchStart": [Function],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "content": Array [
                Object {
                  "caption": "1.jpg",
                  "subtitle": "Co-Founder",
                  "title": "Bertrand Uzeel",
                  "type": "video",
                },
                Object {
                  "caption": "2.jpg",
                  "type": "picture",
                },
                Object {
                  "caption": "3.jpg",
                  "type": "picture",
                },
                Object {
                  "text": "Life is short, work somewhere awesome.",
                  "type": "quote",
                },
                Object {
                  "caption": "4.jpg",
                  "type": "picture",
                },
                Object {
                  "caption": "5.jpg",
                  "subtitle": "Sales Development Manager",
                  "title": "Mélanie Babinot",
                  "type": "video",
                },
                Object {
                  "caption": "6.jpg",
                  "type": "picture",
                },
                Object {
                  "caption": "7.jpg",
                  "type": "picture",
                },
                Object {
                  "text": "C’est pas faux !",
                  "type": "quote",
                },
                Object {
                  "caption": "8.jpg",
                  "subtitle": "CTO",
                  "title": "Kevin Le Roy",
                  "type": "video",
                },
                Object {
                  "caption": "9.jpg",
                  "type": "picture",
                },
                Object {
                  "caption": "10.jpg",
                  "subtitle": "Head of production",
                  "title": "Anne-Claire",
                  "type": "video",
                },
                Object {
                  "caption": "11.jpg",
                  "type": "picture",
                },
              ],
              "contentWidth": null,
              "id": "wttj",
              "refSlider": Object {
                "current": null,
              },
              "step": 0,
              "translateScroll": 0,
              "width": 0,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-jKJlTe",
              "isStatic": true,
              "rules": Array [
                "
  flex: 1;
",
              ],
            },
            "displayName": "styled.div",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-jKJlTe",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          },
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "progress": 14.285714285714285,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "id": "wttj",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-ckVGcZ",
          "isStatic": true,
          "rules": Array [
            "
  border-radius: 6px;
  font-family: \\"Roboto Condensed\\", sans-serif;
  color: ",
            "#31333b",
            ";
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
",
          ],
        },
        "displayName": "styled.div",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-ckVGcZ",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
